--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 */2 * * *" # Every two hours
+    - cron: "0 */2 * * *"
 
 jobs:
   bot:
